--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 </header>
 
 <body>
+    <div id="alertcontainer" class="container OneMargin"></div>
     <div class="container rounded dropshadow comp mxoa">
         <div class="container welcome">
             <strong style="font-size: xx-large;">Universal Union Discord</strong><br>
@@ -40,18 +41,26 @@
         .innerHTML = ""
         
         const html = obj.members.map(users => {
+            console.log()
             return `<li><img src="${users.avatar_url}"> ${users.username} <i class="fas fa-circle ${users.status}"></i></li>`
         })
         .join('')
-
 
         document
         .querySelector("#nameParent")
         .insertAdjacentHTML("afterbegin", html)
     })
-    .catch(function (error) {
-        console.error("Something went wrong.")
-        console.error(error);
+    .catch(function (error) {              
+        document
+        .getElementById('alertcontainer');
+        document
+        .querySelector("#alertcontainer")
+        .insertAdjacentHTML("afterbegin", `
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>A problem occurred.</strong><br>${error}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        `)
     })
 </script>
 
